任务一：零基础HTML编码

--- a/task001/index.html
+++ b/task001/index.html
@@ -2,41 +2,130 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-
-   <title>百度前端技术学院2016题目汇总</title>
 </head>
 
 <body>
-   <h1>IFE春季班第一阶段任务</h1>
-   
-   <h4>2016-03-14 by xiaoqiang</h4>
-   
-   <p>大家好，第一阶段的任务已经在 http://ife.baidu.com 上发布，大家访问官网首页，点击 查看任务 按钮即可进入到任务列表页面。或直接访问 http://ife.baidu.com/task/all。</p>
-   <p>第一阶段的主要目标是帮助大家 了解、认识、学习、掌握HTML及CSS。第一阶段任务从 3月14日 开始，持续到 4月3日。当然，您也可以在这个时间以后继续自行实践练习。</p>
-   
-   <h2>第一阶段任务一共有 12 个题目，如下：</h2>
-   <ul>
-      <li>任务一：面向零基础的HTML代码编写</li>
-      <li>任务二：基于任务1的HTML代码，实现简单的CSS代码编写</li>
-      <li>任务三：HTML、CSS布局入门，三栏式布局的实践</li>
-      <li>任务四：HTML、CSS布局深入，定位和居中问题的实践</li>
-      <li>任务五：基于任务1的HTML代码，实现一个稍微复杂的CSS代码编写</li>
-      <li>任务六：按照设计图，通过HTML/CSS实现一个像报纸杂志一样的页面布局排版</li>
-      <li>任务七：按照设计图，通过HTML/CSS实现一个产品官网</li>
-      <li>任务八：网格/栅格化布局学习与实践</li>
-      <li>任务九：按照设计图，通过HTML/CSS实现一个复杂的业务系统页面</li>
-      <li>任务十：学习和练习Flex布局</li>
-      <li>任务十一：移动Web开发入门，按照设计稿实现一个移动端的页面</li>
-      <li>任务十二：CSS 3新特性的小练习</li>
-    </ul>
-    <p>这十二个任务并非所有人都要去完成，而是需要大家按照自己当前的能力水平来合理评估和选择。
-        对于零基础的同学而言，建议路径为：任务1-2-3-4-5-6/7（/表示或）
-        对于有一定基础，但没做过完整页面的同学，建议路径为：3-4-5-6/7-8-9
-        对于有过页面实践，但没做过太复杂页面的同学，建议路径为：3-4-6/7-8-9
-        对于已经经验很丰富的同学，可以直接做：7-9
+   <!--多考虑标签本身默认的css属性，如哪些标签是自带间距(内外间距)的如<p>，自带空格和换行的(如<blockquote>,ps未考虑兼容性)，  -->
+   <h1>网站一级标题</h1>
+	<dir>
+		<li><a href="#">导航链接一</a></li>
+		<li><a href="#">导航链接二</a></li>
+		<li><a href="#">导航链接三</a></li>
+		<li><a href="#">导航链接四</a></li>
+	</dir>
+	<h2>文章一级标题</h2>
+	<h3>文章二级标题</h3>
+	<p>文章作者 文章发表时间</p>
+	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<br/>换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，<a href = "http://ife.baidu.com">这里有个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+	<img src="a.png">
+	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<br/>换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，<a href = "http://ife.baidu.com" target="_blank">这里有个链接点击后打开新窗口链接到http://ife.baidu.com</a>这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
 
-        任务10-11提供给对移动端开发有兴趣的同学进行挑战
-        任务12提供给初学者，并且对CSS 3各种新特性有兴趣的同学进行挑战</p>
+	<h2>另一篇文章一级标题</h2>
+	<h3>文章二级标题</h3>
+	<p>文章作者 文章发表时间</p>
+	<p>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，<br/>换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br/>这是一个很长很长的段落，这是一个很长很长的段落，<a href = "http://ife.baidu.com">这里有个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，<strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。</p>
+	<img src="a.png">
+	<ul>
+		<li>列表项目一</li>
+		<li>列表项目二</li>
+		<li>列表项目三</li>
+	</ul>
+
+	<h2>图片</h2>
+	<blockquote>好看的图片</br><img src="a.png"></blockquote>
+	<blockquote>好看的图片</br><img src="a.png"></blockquote>
+	<blockquote>好看的图片</br><img src="a.png"></blockquote>
+	<blockquote>好看的图片</br><img src="a.png"></blockquote>
+	<blockquote>好看的图片</br><img src="a.png"></blockquote>
+	<blockquote>好看的图片</br><img src="a.png"></blockquote>
+	<blockquote>好看的图片</br><img src="a.png"></blockquote>
+	<blockquote>好看的图片</br><img src="a.png"></blockquote>
+
+	<h2>最后一篇文章一级标题</h2>
+	<h3>文章二级标题</h3>
+	<p>文章作者 文章发表时间</p>
+	<ol>
+		<li>排名1</li>
+		<li>排名2</li>
+		<li>排名3</li>
+	</ol>
+	<!-- <caption>这个标签也有相同的效果</caption>  -->
+	<div>下面是一个表格，给表格加了一个border="1"好让你看出是一个表格</div>
+	<table border="1">
+	
+		<thead>
+		   <tr>
+			  <th>表头</th>
+			  <th>表头</th>
+			  <th>表头</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>表内容单元格</td>
+				<td>表内容单元格</td>
+				<td><a href="#">操作</a></td>
+			</tr>
+	
+			<tr>
+				<td>表内容单元格</td>
+				<td>表内容单元格</td>
+				<td><a href="#">操作</a></td>
+			</tr>
+	
+			<tr>
+				<td>表内容单元格</td>
+				<td>表内容单元格</td>
+				<td><a href="#">操作</a></td>
+			</tr>
+	
+			<tr>
+				<td>表内容单元格</td>
+				<td>表内容单元格</td>
+				<td><a href="#">操作</a></td>
+			</tr>
+
+		
+		</tbody>
+		<tfoot>
+		    <tr>
+				<td>总计</td>
+				<td colspan="2">1000</td>
+		    </tr>
+		</tfoot>
+		
+	</table>
+
+	<h2>这里以后是一个侧栏，这是侧栏的标题</h2>
+	<h2>侧栏注册窗口标题</h2>
+	
+	<!-- 表单 某某某的开始 -->
+	<form action="">
+	    <!-- 注意：placeholder的值会当做默认值提交-->
+		<p><span>请输入邮箱地址：</span><input type="text" placeholder="这是一个文本输入框"></p>
+		<p>邮箱地址请按要求格式输入</p>
+		<p><span>请输入密码：</span><input type="text" placeholder="这是一个文本输入框"><span>请重复输入密码：</span><input type="text" placeholder="这是一个文本输入框"></p>
+		<p>密码请为6-16位英文数字</p>
+	
+		<span>性别：</span>
+		<input type="radio" checked name="sex">男 
+		<input type="radio" name="sex">女 
+		<span>城市：</span>
+		<select name="city">   
+	        <option value="1">北京</option>    
+	    </select>  
+	
+	    <span>爱好：</span> 
+	    <input type="checkbox" name="habby">运动
+	    <input type="checkbox" name="habby">艺术
+	    <input type="checkbox" name="habby">科学
+	
+	    <span>个人描述：</span>
+	    <textarea>这是一个多行输入框，输入您的个人描述</textarea>
+	    <input type="submit" value="确认提交">
+     </form>
+     <!-- 表单 某某某的结束 -->
+    <footer>版权所有©</footer>
       
       
 </body>
