--- a/task003/index.html
+++ b/task003/index.html
@@ -7,7 +7,7 @@
         body{font-family: "microsoft yahei"; font-size: 12px;box-sizing:content-box;}
 		.left-content img{width:80px;position: relative;top:30px;left:30px;}
 		.right-content img{width:80px;}
-        .main-content  {position:relative;background-color: #eee; padding: 20px; border: 2px solid #999; overflow: auto;}
+        .main-content  {position:relative;background-color: #eee; padding: 20px; border: 2px solid #999; min-height:400px}
         .left-content  {width:200px;height:120px;position:absolute;top:20px;left:20px;background-color: #fff;}
 		 .left-content p {position:absolute;top:10px;right:28px;}
         .center-content{margin: 0px 160px 0 240px;padding: 20px;background-color: #fff;}
