--- a/task005/index.html
+++ b/task005/index.html
@@ -19,14 +19,16 @@
         .nav-links a{color: #fff; text-decoration: none}
         .nav-links a:hover  {color: #888}
         /*文章区*/
+		.content{overflow: hidden;}
+		.left-content{    margin-left: 10px; margin-right: 330px;}
         article{padding: 20px; margin-top: 20px; background-color: #fff; box-shadow: 2px 2px 2px #aaa;}
         article h1{font-size: 1.5em}
         article h2{font-size: 1.3em; color: #777}
         article .author, article .addtime{color: #999}
         article p{text-indent: 2em; font-size: 14px;}
         /*图片列表*/
-        .pic-list{list-style: none}
-        .pic-list li{width: 340px; border: 1px #ccc solid; box-sizing: border-box; padding: 0 10px 10px 10px; text-align: center; margin-bottom: 20px;}
+        .pic-list{list-style: none;overflow: hidden}
+        .pic-list li{width: 340px; border: 1px #ccc solid; box-sizing: border-box; padding: 0 10px 10px 10px; text-align: center; margin-bottom: 20px;float:left;}
         .pic-list h1{font-size: 12px; font-weight: normal}
         /*表格*/
         table{border: 0; width: 100%; border-collapse: collapse}
@@ -34,15 +36,15 @@
         th{background: #333; color: #fff; text-align: left}
         tr:last-child{background: #ccc; font-weight: bold}
         /*侧边栏*/
-        aside{width: 300px;float:right;box-sizing:border-box; padding: 20px; margin-top: 20px; background-color: #fff; box-shadow: 2px 2px 2px #aaa; margin-bottom: 20px;}
-        /* aside h1{border-left: 3px #ccc solid; line-height: 2em; padding-left: 10px; margin: 0;}
-        aside input, aside textarea{border: 1px #999 solid; outline: none; }
-        aside input{padding: 3px}
-        aside form > div{margin: 10px 0}
-        aside .input-title{width: 30%; display: inline-block; vertical-align: top; text-align: right; margin-right: 10px;}
-        aside .input-tip{margin-left: 30%; padding-left: 10px;}
-        aside textarea{height: 50px; width: 400px; }
-        aside button{background: rgb(28, 99, 221); line-height: 3em; border-radius: 5px; border: 0; outline: none; color: #fff; width: 100%;} */
+        .aside-form{width: 300px;float:right;box-sizing:border-box; padding: 20px; margin-top: 20px; background-color: #fff; box-shadow: 2px 2px 2px #aaa; margin-bottom: 20px;}
+        /* aside-form h1{border-left: 3px #ccc solid; line-height: 2em; padding-left: 10px; margin: 0;}
+        .aside-form input, aside-form textarea{border: 1px #999 solid; outline: none; }
+        .aside-form input{padding: 3px}
+        .aside-form form > div{margin: 10px 0}
+        .aside-form .input-title{width: 30%; display: inline-block; vertical-align: top; text-align: right; margin-right: 10px;}
+        .aside-form .input-tip{margin-left: 30%; padding-left: 10px;}
+        .aside-form textarea{height: 50px; width: 400px; }
+        .aside-form button{background: rgb(28, 99, 221); line-height: 3em; border-radius: 5px; border: 0; outline: none; color: #fff; width: 100%;} */
     </style>
 </head>
 <body>
@@ -57,7 +59,47 @@
             </ul>
         </nav>
     </header>
+	
     <div class="content">
+	<div class="aside-form">
+        <h1>这里以后是个侧栏，这是侧栏的标题</h1>
+
+        <form method="post" action="" name="personInfo">
+                <div id="form-left">
+                    请输入邮箱地址<br>
+                    <br>
+                    请输入密码<br>
+                    请重复输入密码<br>
+                    <br>
+                    性别<br>
+                    城市<br>
+                    爱好<br>
+                    个人描述<br>
+                </div>
+                <div id="form-right">
+                    <input type="text" placeholder="这是一个文本输入框"><br>
+                    <span class="form-warning">邮箱地址请按要求格式输入</span><br>
+                    <input type="password" placeholder="*********"><br>
+                    <input type="password" placeholder="*********"><br>
+                    <span class="form-warning">密码请为6-16位英文数字</span><br>
+                    <label><input type="radio" name="sex" value="man" checked> 男</label>
+                    <label><input type="radio" name="sex" value="woman"> 女</label><br>
+                    <select>
+                        <option value="beijing" selected>北京</option>
+                        <option value="shanghai">上海</option>
+                        <option value="guangdong">广东</option>
+                        <option value="nanchang">南昌</option>
+                    </select><br>
+                    <label><input type="checkbox" name="hobby" value="sports"> 运动</label>&nbsp;&nbsp;  
+                    <label><input type="checkbox" name="hobby" value="art"> 艺术</label>&nbsp;&nbsp;
+                    <label><input type="checkbox" name="hobby" value="science"> 科学</label><br>
+                    <textarea class="form-text" name="self-description" cols="24" rows="3" placeholder="这是一个输入框，输入您的个人描述"></textarea>
+                </div>
+                <input class="form-submit" type="submit" value="确认提交">
+            </form>
+
+    </div>
+	<div class="left-content">
         <article>
             <h1>文章一级标题</h1>
             <h2>文章二级标题</h2>
@@ -171,34 +213,8 @@
                 </tbody>
             </table>
         </article>
-		
-	 <aside>
-        <h1>这里以后是个侧栏，这是侧栏的标题</h1>
-
-        <form action="" method="post">
-            <div><div class="input-title">请输入邮箱地址: </div><input type="email" name="email" placeholder="这是一个文本输入框"/></div>
-            <div class="input-tip">邮箱地址请按照要求格式输入 </div>
-            <div><div class="input-title">请输入密码:</div><input type="password" name="password" placeholder="这是一个文本输入框"/> </div></div>
-            <div><div class="input-title">请重复输入密码:</div><input type="password" name="repassword" placeholder="这是一个文本输入框"/> </div>
-            <div class="input-tip">密码为6-16位英文数字</div>
-
-            <div><div class="input-title">性别: </div><label for="gender1"><input type="radio" name="gender" id="gender1" value="nan"/>男</label> <label for="gender2"><input type="radio" name="gender" id="gender2" value="nv"/>女</label></div>
-            <div><div class="input-title">城市: </div><select name="city" >
-                    <option value="beijing">北京</option>
-                    <option value="shanghai">上海</option>
-                    <option value="dalian">大连</option>
-                </select>
-            </div>
-
-            <div><div class="input-title">爱好:</div><label for="aihao1"><input type="checkbox" name="aihao[]" id="aihao1" value="sport"/>运动</label>
-                    <label for="aihao2"><input type="checkbox" name="aihao[]" id="aihao2" value="art"/>艺术</label>
-                    <label for="aihao3"><input type="checkbox" name="aihao[]" id="aihao3" value="science"/>科学</label></div>
-
-            <div> <div class="input-title">个人描述: </div><textarea name="describe">这是一个多行输入框，输入您的个人描述</textarea></div>
-            <div><button type="submit">确认提交</button></div>
-        </form>
-
-    </aside>
+	</div>
+	 
 
     </div>
 
